--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <nav class="navbar">
             <div class="max-width">
                 <div class="logo">
-                    <a href="index.html">Tecliceu </a>
+                   
+                   
+                    <a href="index.html">Tec<span class="logospan">liceu</span> </a>
                 </div>
                 <ul class="menu" id="menu-site">
                     <li><a href="index.html">Home</a></li>
